--- a/pgs.html
+++ b/pgs.html
@@ -2,9 +2,15 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Welcome Sakthi</h1>
 
-<p>My first paragraph.</p>
+<form>
+  First name:<br>
+  <input type="text" name="firstname"><br>
+  Last name:<br>
+  <input type="text" name="lastname"><br>
+  <input type="submit" value="Submit">
+</form>
 
 </body>
 </html>
