--- a/pgs.html
+++ b/pgs.html
@@ -12,5 +12,11 @@
   <input type="submit" value="Submit">
 </form>
 
+<center>
+<img src="sakthi.jpg" width="200" height="200">
+<h1 style="color:green">Welcome</h1>
+
+<p>My first paragraph.</p>
+</center>
 </body>
 </html>
